--- a/config.json
+++ b/config.json
@@ -5,6 +5,12 @@
   "description": "Backup config to S3 bucket",
   "startup": "before",
   "boot": "auto",
+  "arch": [
+      "aarch64",
+      "amd64",
+      "armhf",
+      "i386"
+  ],
   "options": {
     "awskey": "",
     "awssecret": "",
